--- a/index.html
+++ b/index.html
@@ -1221,53 +1221,64 @@
   </a>
 </div>
 
-<!-- Product 65:- Latkan Product:Simple Yellow Latkan  -->
+<!-- Product 65:- Latkan Product: Simple Yellow Latkan (₹100) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/NdvK3t3f/Whats-App-Image-2025-07-03-at-16-13-52-e75b8eb3.jpg" alt="Simple Yellow Latkan">
   <h3>Simple Yellow Latkan</h3>
+  <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹100</p>
   <p>Minimalistic yellow latkan made with quality fabric, ideal for everyday decoration or festive use.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Simple Yellow Latkan' (₹100).%0AProduct Image: https://i.ibb.co/NdvK3t3f/Whats-App-Image-2025-07-03-at-16-13-52-e75b8eb3.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
-<!-- Product 66:- Latkan Product: Aboli Gajara Mala -->
+<!-- Product 66:- Latkan Product: Aboli Gajara Mala – 3ft (₹420) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/BHZZZ5nj/Whats-App-Image-2025-07-04-at-10-14-33-a16a3058.jpg" alt="Aboli Gajara Mala">
   <h3>Aboli Gajara Mala – 3ft</h3>
+  <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹420</p>
   <p>Beautiful 3ft Aboli flower gajara mala, crafted with care to bring vibrant color and charm to any occasion.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Aboli Gajara Mala – 3ft' (₹420).%0AProduct Image: https://i.ibb.co/BHZZZ5nj/Whats-App-Image-2025-07-04-at-10-14-33-a16a3058.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
-<!-- Product 67:- Latkan Product: Juhi Mala Latkan-->
+<!-- Product 67:- Latkan Product: Juhi Mala Latkan (₹250) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/pvR31yhJ/Whats-App-Image-2025-07-04-at-10-14-34-76f137f0.jpg" alt="Juhi Mala Latkan">
   <h3>Juhi Mala Latkan</h3>
   <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹250</p>
   <p>Elegant Juhi Mala latkan with a delicate floral design — perfect for festive decor and traditional celebrations.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Juhi Mala Latkan' (₹250).%0AProduct Image: https://i.ibb.co/pvR31yhJ/Whats-App-Image-2025-07-04-at-10-14-34-76f137f0.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
-<!-- Product 68:- Latkan Product: Yellow Shevanti Gajara Maal-->
+<!-- Product 68:- Latkan Product: Yellow Shevanti Gajara Maal (₹420) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/s9PmVZ18/Whats-App-Image-2025-07-04-at-10-14-34-91b3048e.jpg" alt="Yellow Shevanti Gajara Maal">
   <h3>Yellow Shevanti Gajara Maal</h3>
   <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹420</p>
   <p>Beautifully handcrafted Yellow Shevanti Gajara Maal, 3ft in length. Ideal for vibrant festive backdrops and home décor.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Yellow Shevanti Gajara Maal' (₹420).%0AProduct Image: https://i.ibb.co/s9PmVZ18/Whats-App-Image-2025-07-04-at-10-14-34-91b3048e.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
-<!-- Product 69:- Latkan Product: Parjakta Maal-->
+<!-- Product 69:- Latkan Product: Parjakta Maal – 3ft (₹250) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/SXVHL8v0/Whats-App-Image-2025-07-04-at-10-14-35-65f81b59.jpg" alt="Parjakta Maal">
-  <h3>Parjakta Maal</h3>
+  <h3>Parjakta Maal – 3ft</h3>
   <p><strong>Category:</strong> Latkan</p>
-  <p><strong>Length:</strong> 3ft</p>
   <p><strong>Price:</strong> ₹250</p>
   <p>Elegant 3ft Parjakta flower maal, perfect for festive and traditional decoration.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Parjakta Maal – 3ft' (₹250).%0AProduct Image: https://i.ibb.co/SXVHL8v0/Whats-App-Image-2025-07-04-at-10-14-35-65f81b59.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
 <!-- Product 70:- White Shevanti Gajara Maal-->
