--- a/index.html
+++ b/index.html
@@ -1281,7 +1281,7 @@
   </a>
 </div>
 
-<!-- Product 70:- White Shevanti Gajara Maal-->
+<!-- Product 70:- White Shevanti Gajara Maal -->
 <div class="product latkan">
   <img src="https://i.ibb.co/pvR31yhJ/Whats-App-Image-2025-07-04-at-10-14-34-76f137f0.jpg" alt="White Shevanti Gajara Maal">
   <h3>White Shevanti Gajara Maal</h3>
@@ -1289,102 +1289,99 @@
   <p><strong>Length:</strong> 3ft</p>
   <p><strong>Price:</strong> ₹420</p>
   <p>Premium white Shevanti gajara maal made with high-quality fabric. Ideal for backdrops, festivals, and pooja decor.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'White Shevanti Gajara Maal – 3ft' (₹420).%0AProduct Image: https://i.ibb.co/pvR31yhJ/Whats-App-Image-2025-07-04-at-10-14-34-76f137f0.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 71:-Juhi Maal-->
+<!-- Product 71:- Juhi Maal – 5ft -->
 <div class="product latkan">
   <img src="https://i.ibb.co/kVVdCcR7/Whats-App-Image-2025-07-04-at-10-23-43-30daf1c3.jpg" alt="Juhi Maal 5ft">
-  <h3>Juhi Maal</h3>
+  <h3>Juhi Maal – 5ft</h3>
   <p><strong>Category:</strong> Latkan</p>
-  <p><strong>Length:</strong> 5ft</p>
   <p><strong>Price:</strong> ₹600</p>
   <p>Elegant 5ft Juhi Maal with realistic floral appearance. Perfect for festive decorations, pooja backdrops, and gifting.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Juhi Maal – 5ft' (₹600).%0AProduct Image: https://i.ibb.co/kVVdCcR7/Whats-App-Image-2025-07-04-at-10-23-43-30daf1c3.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 72:-Prajakta Maal-->
+<!-- Product 72:- Prajakta Maal – 5ft -->
 <div class="product latkan">
   <img src="https://i.ibb.co/mVJJ6YXg/Whats-App-Image-2025-07-04-at-10-23-44-26d2fd78.jpg" alt="Prajakta Maal 5ft">
-  <h3>Prajakta Maal</h3>
+  <h3>Prajakta Maal – 5ft</h3>
   <p><strong>Category:</strong> Latkan</p>
-  <p><strong>Length:</strong> 5ft</p>
   <p><strong>Price:</strong> ₹600</p>
   <p>Beautiful 5ft Prajakta Maal, crafted with vibrant blossoms. Ideal for traditional decor, poojas, and festive ambiance.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Prajakta Maal – 5ft' (₹600).%0AProduct Image: https://i.ibb.co/mVJJ6YXg/Whats-App-Image-2025-07-04-at-10-23-44-26d2fd78.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 73:-Juhi Maal & Rose Latkan-->
+<!-- Product 73:- Juhi Maal & Rose Latkan – 1ft -->
 <div class="product latkan">
   <img src="https://i.ibb.co/LzqrGzNc/Whats-App-Image-2025-07-04-at-10-45-58-f42381f1.jpg" alt="Juhi Maal and Rose Latkan">
-  <h3>Juhi Maal & Rose Latkan</h3>
+  <h3>Juhi Maal & Rose Latkan – 1ft</h3>
   <p><strong>Category:</strong> Latkan</p>
-  <p><strong>Size:</strong> 1ft</p>
   <p><strong>Price:</strong> ₹100 (Single) / ₹200 (Pair)</p>
   <p>Elegant 1ft latkan featuring Juhi Maal and rose detailing — perfect for doorways, backdrops, and pooja decor.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Juhi Maal & Rose Latkan – 1ft' (₹100 single / ₹200 pair).%0AProduct Image: https://i.ibb.co/LzqrGzNc/Whats-App-Image-2025-07-04-at-10-45-58-f42381f1.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-
-<!-- Product 74:-Small Size Lotus-->
+<!-- Product 74:- Small Size Lotus -->
 <div class="product decor">
   <img src="https://i.ibb.co/ZzHjSKB3/Whats-App-Image-2025-07-04-at-10-54-51-c5bc287c.jpg" alt="Small Size Lotus">
   <h3>Small Size Lotus</h3>
   <p><strong>Category:</strong> Home Decor</p>
   <p><strong>Price:</strong> ₹180</p>
   <p>Beautiful handcrafted small lotus perfect for festive setups, home mandirs, and traditional decor accents.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
-  </div>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Small Size Lotus' (₹180).%0AProduct Image: https://i.ibb.co/ZzHjSKB3/Whats-App-Image-2025-07-04-at-10-54-51-c5bc287c.jpg" target="_blank">Buy on WhatsApp</a>
+</div>
 
-<!-- Product 75:-Large Size Lotus-->
+<!-- Product 75:- Large Size Lotus -->
 <div class="product decor">
   <img src="https://i.ibb.co/ZpGTY8Xq/Whats-App-Image-2025-07-04-at-10-54-52-b54ed6bb.jpg" alt="Large Size Lotus">
   <h3>Large Size Lotus</h3>
   <p><strong>Category:</strong> Home Decor</p>
   <p><strong>Price:</strong> ₹399</p>
   <p>Elegant large lotus piece, perfect for enhancing the beauty of your home decor or pooja arrangements.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Large Size Lotus' (₹399).%0AProduct Image: https://i.ibb.co/ZpGTY8Xq/Whats-App-Image-2025-07-04-at-10-54-52-b54ed6bb.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 76:-Medium Size Lotus-->
+<!-- Product 76:- Medium Size Lotus -->
 <div class="product decor">
   <img src="https://i.ibb.co/VcsgWwnc/Whats-App-Image-2025-07-04-at-10-54-52-e0b03934.jpg" alt="Medium Size Lotus">
   <h3>Medium Size Lotus</h3>
   <p><strong>Category:</strong> Home Decor</p>
   <p><strong>Price:</strong> ₹270</p>
   <p>Graceful medium-sized lotus decor, ideal for festive displays or spiritual spaces. Balanced in size and beauty.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Medium Size Lotus' (₹270).%0AProduct Image: https://i.ibb.co/VcsgWwnc/Whats-App-Image-2025-07-04-at-10-54-52-e0b03934.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 77:-Pan Gonda Patches-->
+<!-- Product 77:- Pan Gonda Patches -->
 <div class="product decor">
   <img src="https://i.ibb.co/XZX28y6W/Whats-App-Image-2025-07-04-at-12-48-28-f28591db.jpg" alt="Pan Gonda Patches">
   <h3>Pan Gonda Patches</h3>
   <p><strong>Category:</strong> Home Decor</p>
-  <p><strong>Price:</strong> ₹25 each (4 pieces ₹100)</p>
+  <p><strong>Price:</strong> ₹25 each (4 for ₹100)</p>
   <p>Colorful Pan Gonda patches perfect for enhancing pooja decor or festive backdrops. Affordable and eye-catching!</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'Pan Gonda Patches' (₹25 each or 4 for ₹100).%0AProduct Image: https://i.ibb.co/XZX28y6W/Whats-App-Image-2025-07-04-at-12-48-28-f28591db.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 78:-Pink Flower & Velvet Leaf Latkan-->
+<!-- Product 78:- Pink Flower & Velvet Leaf Latkan -->
 <div class="product decor">
   <img src="https://i.ibb.co/gbJ5sK0v/Whats-App-Image-2025-07-04-at-12-48-29-3bedf0e7.jpg" alt="Pink Flower with Velvet Leaf Latkan">
   <h3>Pink Flower & Velvet Leaf Latkan</h3>
   <p><strong>Category:</strong> Home Decor</p>
-  <p><strong>Price:</strong> ₹150 (per pair)</p>
+  <p><strong>Price:</strong> ₹150 (Pair)</p>
   <p>Elegant pink flower with rich velvet leaf and attached latkan – a charming pair to enhance your festive or interior decor.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'Pink Flower & Velvet Leaf Latkan' (₹150 pair).%0AProduct Image: https://i.ibb.co/gbJ5sK0v/Whats-App-Image-2025-07-04-at-12-48-29-3bedf0e7.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 79:-Lotus Leaf & Flower Kali-->
+<!-- Product 79:- Lotus Leaf & Flower Kali -->
 <div class="product decor">
   <img src="https://i.ibb.co/5fTnX59/Whats-App-Image-2025-07-04-at-12-51-44-5e0b1722.jpg" alt="Lotus Leaf and Flower Kali">
   <h3>Lotus Leaf & Flower Kali</h3>
   <p><strong>Category:</strong> Home Decor</p>
   <p><strong>Price:</strong> ₹25 each</p>
-  <p>Decorative lotus leaf and flower kali made from water-float material. Perfect for traditional floating arrangements or pooja decor.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <p>Decorative lotus leaf and flower kali made from water-float material. Perfect for floating arrangements or pooja decor.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order 'Lotus Leaf & Flower Kali' (₹25 each).%0AProduct Image: https://i.ibb.co/5fTnX59/Whats-App-Image-2025-07-04-at-12-51-44-5e0b1722.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
+
 
 <!-- Product 80:-Floating Lotus Flower (Big)-->
 <div class="product decor">
