--- a/index.html
+++ b/index.html
@@ -1383,34 +1383,34 @@
 </div>
 
 
-<!-- Product 80:-Floating Lotus Flower (Big)-->
+<!-- Product 80:- Floating Lotus Flower (Big) -->
 <div class="product decor">
   <img src="https://i.ibb.co/nskfRWxq/Whats-App-Image-2025-07-04-at-12-51-44-42806dff.jpg" alt="Floating Lotus Flower Big Size">
   <h3>Floating Lotus Flower (Big)</h3>
   <p><strong>Category:</strong> Home Decor</p>
   <p><strong>Price:</strong> ₹50 each</p>
   <p>Big size floating lotus flower ideal for water decor, pooja bowls, and festive arrangements. Elegant and reusable.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Floating Lotus Flower (Big)' (₹50 each).%0AProduct Image: https://i.ibb.co/nskfRWxq/Whats-App-Image-2025-07-04-at-12-51-44-42806dff.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 81:-Floating Lotus Flower (Big)-->
+<!-- Product 81:- Floating Lotus Flower (Big) – Alternate -->
 <div class="product decor">
   <img src="https://i.ibb.co/1GS3bnmR/Whats-App-Image-2025-07-04-at-12-51-44-1172c377.jpg" alt="Floating Lotus Flower Big Size 2">
   <h3>Floating Lotus Flower (Big)</h3>
   <p><strong>Category:</strong> Home Decor</p>
   <p><strong>Price:</strong> ₹50 each</p>
   <p>Big size floating lotus flower – perfect for water decor, pooja bowls, or festival decoration. Multiple colors available.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Floating Lotus Flower (Big)' (₹50 each).%0AProduct Image: https://i.ibb.co/1GS3bnmR/Whats-App-Image-2025-07-04-at-12-51-44-1172c377.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 82:-Haar / Samai Ring-->
+<!-- Product 82:- Haar / Samai Ring -->
 <div class="product haar">
   <img src="https://i.ibb.co/7JbxBQWR/Whats-App-Image-2025-07-04-at-13-05-22-50e725c0.jpg" alt="Haar or Samai Ring">
   <h3>Haar / Samai Ring</h3>
   <p><strong>Category:</strong> Haar / Kanthi</p>
   <p><strong>Price:</strong> ₹100</p>
   <p>Beautiful multipurpose Haar or Samai Ring – perfect for traditional decoration or use with samai stands. Elegant and reusable.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Haar / Samai Ring' (₹100).%0AProduct Image: https://i.ibb.co/7JbxBQWR/Whats-App-Image-2025-07-04-at-13-05-22-50e725c0.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
  </div>
