added Hair Growth Decor

--- a/index.html
+++ b/index.html
@@ -1413,6 +1413,18 @@
   <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Haar / Samai Ring' (₹100).%0AProduct Image: https://i.ibb.co/7JbxBQWR/Whats-App-Image-2025-07-04-at-13-05-22-50e725c0.jpg" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 83:- Hair Growth Decor -->
+<div class="product decor">
+  <img src="https://i.ibb.co/CpDn3tV5/Whats-App-Image-2025-07-04-at-14-24-13-b44bf7e3.jpg" alt="Hair Growth Decor">
+  <h3>Hair Growth Decor</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹220</p>
+  <p>Beautiful handcrafted decor item themed around hair growth – unique, vibrant, and perfect for adding charm to pooja spaces or spiritual decor.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Hair Growth Decor' (₹220).%0AProduct Image: https://i.ibb.co/CpDn3tV5/Whats-App-Image-2025-07-04-at-14-24-13-b44bf7e3.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
