added Umbharta Patti

--- a/index.html
+++ b/index.html
@@ -1425,6 +1425,18 @@
   </a>
 </div>
 
+<!-- Product 84:- Umbharta Patti (Two Part) -->
+<div class="product decor">
+  <img src="https://i.ibb.co/wZbrwqwR/Whats-App-Image-2025-07-04-at-15-05-13-d02407d5.jpg" alt="Umbharta Patti">
+  <h3>Umbharta Patti – Two Part</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹280</p>
+  <p>Elegant two-part Umbharta Patti for decorating entrances, mandirs, or backdrops. Beautiful handcrafted design for festive vibes.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Umbharta Patti – Two Part' (₹280).%0AProduct Image: https://i.ibb.co/wZbrwqwR/Whats-App-Image-2025-07-04-at-15-05-13-d02407d5.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
