--- a/index.html
+++ b/index.html
@@ -1437,6 +1437,18 @@
   </a>
 </div>
 
+<!-- Product 85:- Simple Rangoli -->
+<div class="product rangoli">
+  <img src="https://i.ibb.co/23Czrbh/Whats-App-Image-2025-07-04-at-16-13-01-db0a1257.jpg" alt="Simple Rangoli">
+  <h3>Simple Rangoli</h3>
+  <p><strong>Category:</strong> Rangoli</p>
+  <p><strong>Price:</strong> ₹80</p>
+  <p>Minimalistic yet vibrant simple rangoli. A perfect traditional touch for daily pooja, gifting, or festive decoration.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Simple Rangoli' (₹80).%0AProduct Image: https://i.ibb.co/23Czrbh/Whats-App-Image-2025-07-04-at-16-13-01-db0a1257.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
