--- a/index.html
+++ b/index.html
@@ -1449,6 +1449,19 @@
   </a>
 </div>
 
+<!-- Product 86:- Banana Tree Khamb -->
+<div class="product decor">
+  <img src="https://i.ibb.co/ccZzBRkY/Whats-App-Image-2025-07-05-at-23-40-25-25e86c53.jpg" alt="Banana Tree Khamb">
+  <h3>Banana Tree Khamb</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Material:</strong> Fabric Leaves with Banana & Flower Attached</p>
+  <p><strong>Price:</strong> ₹2250</p>
+  <p>Grand decorative banana tree khamb, crafted with fabric leaves, bananas, and attached banana flowers. Ideal for pooja entrances, weddings, and traditional decor setups.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Banana Tree Khamb' (₹2250).%0AProduct Image: https://i.ibb.co/ccZzBRkY/Whats-App-Image-2025-07-05-at-23-40-25-25e86c53.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
