added Mandir Powder Patti

--- a/index.html
+++ b/index.html
@@ -1462,6 +1462,20 @@
   </a>
 </div>
 
+<!-- Product 87:- Mandir Powder Patti -->
+<div class="product decor">
+  <img src="https://i.ibb.co/60Dn7gJK/Whats-App-Image-2025-07-04-at-15-28-23-91686830.jpg" alt="Mandir Powder Patti">
+  <h3>Mandir Powder Patti</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Length:</strong> 1.5 feet</p>
+  <p><strong>Material:</strong> Bandhani Fabric with Kundan Design</p>
+  <p><strong>Price:</strong> ₹220</p>
+  <p>Beautiful Mandir powder patti crafted with traditional Bandhani fabric and intricate Kundan work. Perfect for decorating mandirs and pooja spaces.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Mandir Powder Patti' (₹220).%0AProduct Image: https://i.ibb.co/60Dn7gJK/Whats-App-Image-2025-07-04-at-15-28-23-91686830.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
