added Mandir Powder Patti

--- a/index.html
+++ b/index.html
@@ -1476,6 +1476,19 @@
   </a>
 </div>
 
+<!-- Product 88:- Small Umbharta Patti -->
+<div class="product decor">
+  <img src="https://i.ibb.co/BKfW3CwJ/Whats-App-Image-2025-07-04-at-15-28-23-493bcb61.jpg" alt="Small Umbharta Patti">
+  <h3>Small Umbharta Patti</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Design:</strong> Red Bandhani Fabric with Kundan Work</p>
+  <p><strong>Price:</strong> ₹20</p>
+  <p>Decorative small umbharta patti made with red Bandhani cloth and adorned with beautiful Kundan design. Perfect for doorways and traditional home decoration.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Small Umbharta Patti' (₹20).%0AProduct Image: https://i.ibb.co/BKfW3CwJ/Whats-App-Image-2025-07-04-at-15-28-23-493bcb61.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
