--- a/index.html
+++ b/index.html
@@ -1489,6 +1489,20 @@
   </a>
 </div>
 
+<!-- Product 89:- Large Umbharta Patti -->
+<div class="product decor">
+  <img src="https://i.ibb.co/xtcy7fhp/Whats-App-Image-2025-07-04-at-15-28-24-8a0f1f73.jpg" alt="Large Umbharta Patti">
+  <h3>Large Umbharta Patti</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Length:</strong> 3 feet</p>
+  <p><strong>Design:</strong> Red Bandhani Fabric with Kundan Work</p>
+  <p><strong>Price:</strong> ₹40</p>
+  <p>Traditional large umbharta patti crafted with red Bandhani cloth and detailed Kundan design. Ideal for entrances, pooja areas, and festive decorations.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Large Umbharta Patti' (₹40).%0AProduct Image: https://i.ibb.co/xtcy7fhp/Whats-App-Image-2025-07-04-at-15-28-24-8a0f1f73.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
