--- a/index.html
+++ b/index.html
@@ -1460,7 +1460,7 @@
   </a>
 </div>
 
-<!-- Product 87:- Mandir Powder Patti -->
+<!-- Product 87:- Mandir Patti -->
 <div class="product decor">
   <img src="https://i.ibb.co/60Dn7gJK/Whats-App-Image-2025-07-04-at-15-28-23-91686830.jpg" alt="Mandir Powder Patti">
   <h3>Mandir Powder Patti</h3>
@@ -1480,7 +1480,7 @@
   <h3>Small Umbharta Patti</h3>
   <p><strong>Category:</strong> Home Decor</p>
   <p><strong>Design:</strong> Red Bandhani Fabric with Kundan Work</p>
-  <p><strong>Price:</strong> ₹20</p>
+  <p><strong>Price:</strong> ₹220</p>
   <p>Decorative small umbharta patti made with red Bandhani cloth and adorned with beautiful Kundan design. Perfect for doorways and traditional home decoration.</p>
   <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Small Umbharta Patti' (₹20).%0AProduct Image: https://i.ibb.co/BKfW3CwJ/Whats-App-Image-2025-07-04-at-15-28-23-493bcb61.jpg" target="_blank">
     Buy on WhatsApp
@@ -1494,7 +1494,7 @@
   <p><strong>Category:</strong> Home Decor</p>
   <p><strong>Length:</strong> 3 feet</p>
   <p><strong>Design:</strong> Red Bandhani Fabric with Kundan Work</p>
-  <p><strong>Price:</strong> ₹40</p>
+  <p><strong>Price:</strong> ₹440</p>
   <p>Traditional large umbharta patti crafted with red Bandhani cloth and detailed Kundan design. Ideal for entrances, pooja areas, and festive decorations.</p>
   <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Large Umbharta Patti' (₹40).%0AProduct Image: https://i.ibb.co/xtcy7fhp/Whats-App-Image-2025-07-04-at-15-28-24-8a0f1f73.jpg" target="_blank">
     Buy on WhatsApp
