--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@
 <!-- Product 87:- Mandir Patti -->
 <div class="product decor">
   <img src="https://i.ibb.co/60Dn7gJK/Whats-App-Image-2025-07-04-at-15-28-23-91686830.jpg" alt="Mandir Powder Patti">
-  <h3>Mandir Powder Patti</h3>
+  <h3>Mandir Patti</h3>
   <p><strong>Category:</strong> Home Decor</p>
   <p><strong>Length:</strong> 1.5 feet</p>
   <p><strong>Material:</strong> Bandhani Fabric with Kundan Design</p>
