added Banana tree stand

--- a/index.html
+++ b/index.html
@@ -1501,6 +1501,19 @@
   </a>
 </div>
 
+<!-- Product 90:- Heart MDF Roll -->
+<div class="product decor">
+  <img src="https://i.ibb.co/tPL6fXYt/Whats-App-Image-2025-07-08-at-18-15-49-cbcc8e16.jpg" alt="Heart MDF Roll">
+  <h3>Banana tree stand </h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Size:</strong> 10 inches</p>
+  <p><strong>Price:</strong> ₹899</p>
+  <p>Premium Heart-shaped MDF roll made with jute cloth, red lace, Kundan patch, Lakshmi stickers, and Lotus Diya patch. Ideal for pooja decor, gifting, and festive displays.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Heart MDF Roll' (₹899).%0AProduct Image: https://i.ibb.co/tPL6fXYt/Whats-App-Image-2025-07-08-at-18-15-49-cbcc8e16.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
