added Banana tree stand

--- a/index.html
+++ b/index.html
@@ -1514,6 +1514,19 @@
   </a>
 </div>
 
+<!-- Product 91:- Hard MDF Board Roll (Maroon & Mango Yellow) -->
+<div class="product decor">
+  <img src="https://i.ibb.co/2YCGBcj6/Whats-App-Image-2025-07-08-at-18-15-50-0e5189e2.jpg" alt="Hard MDF Board Roll - Maroon & Mango Yellow">
+  <h3>Hard Banana tree stand</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Size:</strong> 10 inches</p>
+  <p><strong>Price:</strong> ₹899 each</p>
+  <p>Hard MDF board roll decorated with maroon lace, mango yellow jute cloth, and Kundan design. Perfect for festive decor and traditional setups.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Hard MDF Board Roll – Maroon & Mango Yellow' (₹899 each).%0AProduct Image: https://i.ibb.co/2YCGBcj6/Whats-App-Image-2025-07-08-at-18-15-50-0e5189e2.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
