added Banana tree stand

--- a/index.html
+++ b/index.html
@@ -1527,6 +1527,19 @@
   </a>
 </div>
 
+<!-- Product 92:- Hard MDF Roll (Jute with Red Lace & Lakshmi Design) -->
+<div class="product decor">
+  <img src="https://i.ibb.co/ynrcj5yd/Whats-App-Image-2025-07-08-at-18-18-26-997728bd.jpg" alt="Hard MDF Roll - Lakshmi and Lotus Diya">
+  <h3>Banana tree stand – Lakshmi & Lotus Diya</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Size:</strong> 10 inches</p>
+  <p><strong>Price:</strong> ₹899</p>
+  <p>Decorative hard MDF roll with jute cloth, red lace, Kundan patch, Lakshmi stickers, and lotus diya accents. Ideal for festive mandir decoration.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Hard MDF Roll – Lakshmi & Lotus Diya' (₹899).%0AProduct Image: https://i.ibb.co/ynrcj5yd/Whats-App-Image-2025-07-08-at-18-18-26-997728bd.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
