added Banana tree stand

--- a/index.html
+++ b/index.html
@@ -1540,6 +1540,18 @@
   </a>
 </div>
 
+<!-- Product 93:- Jaswant Flower (Fabric) -->
+<div class="product decor">
+  <img src="https://i.postimg.cc/W3m5rH58/Whats-App-Image-2025-07-10-at-19-45-36-075a09ec.jpg" alt="Jaswant Flower - Fabric">
+  <h3>Jaswant Flower (Fabric)</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹120 each</p>
+  <p>Beautiful fabric Jaswant flower — perfect for floral decorations, pooja setups, and festive home arrangements.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Jaswant Flower (Fabric)' for ₹120 each.%0AProduct Image: https://i.postimg.cc/W3m5rH58/Whats-App-Image-2025-07-10-at-19-45-36-075a09ec.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
