--- a/index.html
+++ b/index.html
@@ -1552,6 +1552,18 @@
   </a>
 </div>
 
+<!-- Product 94:- Lakshmi Face -->
+<div class="product decor">
+  <img src="https://i.ibb.co/s90vRXWh/Whats-App-Image-2025-07-10-at-21-41-33-c5503c6d.jpg" alt="Lakshmi Face">
+  <h3>Lakshmi Face</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹800 each</p>
+  <p>Traditional Lakshmi face idol, perfect for Diwali decorations, festive altars, and pooja room decor. Crafted with detailed finish and elegance.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Lakshmi Face' for ₹800 each.%0AProduct Image: https://i.ibb.co/s90vRXWh/Whats-App-Image-2025-07-10-at-21-41-33-c5503c6d.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
