--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
 </div>
 
 <!-- Product 38: Metal Lakshmi Face Samai & Kalash Decoration-->
-<div class="product decor">
+<!--<div class="product decor">
   <img src="https://i.ibb.co/y1XWNyr/Whats-App-Image-2025-07-03-at-00-44-01-54f10738.jpg" alt="Lakshmi Face Kalash Decoration">
   <h3>Metal Lakshmi Face Samai & Kalash Decoration</h3>
   <p><strong>Price:</strong> ₹720</p>
@@ -858,7 +858,7 @@
     Buy on WhatsApp
   </a>
 </div>
-
+-->
 <!-- Product 38: Small Tulsi Vrindavan Rangoli-->
 <div class="product rangoli">
   <img src="https://i.ibb.co/tTmV2jkL/Whats-App-Image-2025-06-08-at-20-49-32-ff70b5f0.jpg" alt="Small Tulsi Vrindavan Rangoli">
