--- a/index.html
+++ b/index.html
@@ -1564,6 +1564,18 @@
   </a>
 </div>
 
+<!-- Product 95:- OHP Sheet with Moti Work Kanti -->
+<div class="product haar">
+  <img src="https://i.ibb.co/m5xKnz9h/Whats-App-Image-2025-07-11-at-15-10-27-cc52e8d0.jpg" alt="OHP Sheet with Moti Work Kanti">
+  <h3>OHP Sheet with Moti Work Kanti</h3>
+  <p><strong>Category:</strong> Haar / Kanthi</p>
+  <p><strong>Price:</strong> ₹450</p>
+  <p>Elegant Kanti crafted with OHP sheet and moti (pearl) work. Ideal for traditional pooja decor, samai, or festival backdrops.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'OHP Sheet with Moti Work Kanti' for ₹450.%0AProduct Image: https://i.ibb.co/m5xKnz9h/Whats-App-Image-2025-07-11-at-15-10-27-cc52e8d0.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
