--- a/index.html
+++ b/index.html
@@ -1576,6 +1576,18 @@
   </a>
 </div>
 
+<!-- Product 96:- OHP Sheet Mini Kanthi -->
+<div class="product haar">
+  <img src="https://i.ibb.co/tp3sGmQ6/Whats-App-Image-2025-07-11-at-15-10-27-e1b75b6d.jpg" alt="OHP Sheet Mini Kanthi">
+  <h3>OHP Sheet Mini Kanthi</h3>
+  <p><strong>Category:</strong> Haar / Kanthi</p>
+  <p><strong>Price:</strong> ₹140</p>
+  <p>Compact and elegant mini kanthi made from OHP sheet and pearl work. Ideal for samai, pooja setups, or traditional decor.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'OHP Sheet Mini Kanthi' for ₹140.%0AProduct Image: https://i.ibb.co/tp3sGmQ6/Whats-App-Image-2025-07-11-at-15-10-27-e1b75b6d.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
