--- a/index.html
+++ b/index.html
@@ -1588,6 +1588,18 @@
   </a>
 </div>
 
+<!-- Product 97:- OHP Sheet with Moti Work Kanthi (Small Size) -->
+<div class="product haar">
+  <img src="https://i.ibb.co/YTTt95wr/Whats-App-Image-2025-07-11-at-15-25-42-f1bc8ffe.jpg" alt="OHP Sheet with Moti Work Kanthi Small">
+  <h3>OHP Sheet Kanthi – Small Size</h3>
+  <p><strong>Category:</strong> Haar / Kanthi</p>
+  <p><strong>Price:</strong> ₹350</p>
+  <p>Graceful small-sized kanthi made using OHP sheet and pearl (moti) embellishments. Perfect for pooja samai or festive decorations.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'OHP Sheet Kanthi – Small Size' for ₹350.%0AProduct Image: https://i.ibb.co/YTTt95wr/Whats-App-Image-2025-07-11-at-15-25-42-f1bc8ffe.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
