--- a/index.html
+++ b/index.html
@@ -1600,6 +1600,18 @@
   </a>
 </div>
 
+<!-- Product 98:- Moti Kanthi -->
+<div class="product haar">
+  <img src="https://i.ibb.co/1J2Ny27g/Whats-App-Image-2025-07-11-at-15-35-12-f55dd1cb.jpg" alt="Moti Kanthi">
+  <h3>Moti Kanthi</h3>
+  <p><strong>Category:</strong> Haar / Kanthi</p>
+  <p><strong>Price:</strong> ₹150</p>
+  <p>Traditional Moti Kanthi with pearl detailing – elegant and perfect for pooja samai, backdrops, or festive decoration.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Moti Kanthi' for ₹150.%0AProduct Image: https://i.ibb.co/1J2Ny27g/Whats-App-Image-2025-07-11-at-15-35-12-f55dd1cb.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
