added Umartha Patti

--- a/index.html
+++ b/index.html
@@ -1624,6 +1624,18 @@
   </a>
 </div>
 
+<!-- Product 100:- OHP Sheet Patti Rangoli -->
+<div class="product rangoli">
+  <img src="https://i.ibb.co/RGn6fBWf/Whats-App-Image-2025-07-11-at-20-41-35-d3720500.jpg" alt="OHP Sheet Patti Rangoli">
+  <h3>OHP Sheet Patti Rangoli</h3>
+  <p><strong>Category:</strong> Rangoli</p>
+  <p><strong>Price:</strong> ₹275</p>
+  <p>Decorative patti rangoli made on OHP sheet featuring vibrant yellow, orange, and Rani pink colors with elegant Kundan design. Perfect for entrances and festive décor.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'OHP Sheet Patti Rangoli' for ₹275.%0AProduct Image: https://i.ibb.co/RGn6fBWf/Whats-App-Image-2025-07-11-at-20-41-35-d3720500.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
